# cli

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.ko.md  README.md  release.toml
.agent-deck/: pr-생성.deck.md  커밋-분할-푸시.deck.md
.claude/rules/: README.md  cli-clap-evidence-mandatory.md  cli-daemon-bin-resolution-order.md  cli-unix-socket-only-no-tcp-fallback.md  mcp-stdio-contract.md  release-cascade-to-plugin-manifest.md
.github/workflows/: ci.yml  release.yml
docs/adr/: 0002-hook-injection-strategy-evidence.md  0002-hook-injection-strategy.md
docs/adr/evidence/: 0002-headless-stream.jsonl
docs/mcp/: cursor-setup.md
docs/plans/: strict-format.md
docs/workflows/: execute.md
src/: client.rs  codex.rs  daemon.rs  daemon_autostart.rs  doctor.rs  doctor_checks.rs  error.rs  init.rs  main.rs  mcp.rs  migrate.rs  paths.rs  runtime.rs  verify.rs
tests/: decompose_atomic.rs  headless_hook.rs  mcp_compat.rs  plan_export_roundtrip.rs
tests/fixtures/headless-hook/: CLAUDE.md
tests/fixtures/headless-hook/.claude/: settings.json
tests/fixtures/headless-hook/.claude/hooks/: session-start.cjs
