[package]
name = "clawket"
version = "2.0.0"
edition = "2024"
description = "Structured task contracts for LLM coding agents — Rust CLI for the Clawket daemon (embeds MCP stdio server)"
license = "MIT"
repository = "https://github.com/clawket/cli"
homepage = "https://github.com/clawket/clawket"
keywords = ["clawket", "cli", "task-management"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
http-body-util = "0.1"
tokio = { version = "1", features = ["rt", "net", "macros", "io-std"] }
tower = { version = "0.5", features = ["util"] }
bytes = "1"
libc = "0.2"
rmcp = { version = "1.5", features = ["server", "transport-io"] }
schemars = "1.1"
regex = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }

[dev-dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "process"] }

[profile.release]
strip = true
lto = true
